--- a/src/test/resources/Reports/Cadastro.html
+++ b/src/test/resources/Reports/Cadastro.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Mar 27, 2020 06:09:02 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Apr 1, 2020 08:41:57 AM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Negativo</span>
-						<span class='test-time'>Mar 27, 2020 06:09:34 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:42:22 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:09:34 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:09:34 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+362ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:42:22 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:42:22 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+400ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,7 +179,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:09:34 PM</td>
+					<td class='timestamp'>8:42:22 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteCadastroNegativo</td>
 				</tr>
 			</tbody>
@@ -195,14 +195,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Positivo</span>
-						<span class='test-time'>Mar 27, 2020 06:10:09 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:42:48 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:10:09 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:10:09 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+754ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:42:48 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:42:49 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+733ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -216,7 +216,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:10:09 PM</td>
+					<td class='timestamp'>8:42:49 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteCadastroPositivo</td>
 				</tr>
 			</tbody>
@@ -274,19 +274,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 27, 2020 06:09:02 PM</div>
+					<div class='panel-lead'>Apr 1, 2020 08:41:57 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 27, 2020 06:10:13 PM</div>
+			 		<div class='panel-lead'>Apr 1, 2020 08:42:52 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 1m 10s+643ms</div>
+					<div class='panel-lead'>0h 0m 54s+742ms</div>
 				</div>
 			</div>
 		</div>
