--- a/src/test/resources/Reports/ConsultaHome.html
+++ b/src/test/resources/Reports/ConsultaHome.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Mar 27, 2020 06:12:46 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Apr 1, 2020 08:43:13 AM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Negativo</span>
-						<span class='test-time'>Mar 27, 2020 06:12:56 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:43:21 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:12:56 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:12:56 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+398ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:43:21 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:43:21 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+350ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,7 +179,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:12:56 PM</td>
+					<td class='timestamp'>8:43:21 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteConsultaHomeNegativo</td>
 				</tr>
 			</tbody>
@@ -195,14 +195,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Positivo</span>
-						<span class='test-time'>Mar 27, 2020 06:13:08 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:43:30 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:13:08 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:13:09 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+318ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:43:30 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:43:31 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+703ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -216,7 +216,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:13:09 PM</td>
+					<td class='timestamp'>8:43:31 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteConsultaHomePositivo</td>
 				</tr>
 			</tbody>
@@ -274,19 +274,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 27, 2020 06:12:46 PM</div>
+					<div class='panel-lead'>Apr 1, 2020 08:43:13 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 27, 2020 06:13:10 PM</div>
+			 		<div class='panel-lead'>Apr 1, 2020 08:43:32 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 23s+222ms</div>
+					<div class='panel-lead'>0h 0m 18s+971ms</div>
 				</div>
 			</div>
 		</div>
