--- a/src/test/resources/Reports/Login.html
+++ b/src/test/resources/Reports/Login.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Mar 27, 2020 06:03:10 PM</span>
+                    <span class='label suite-start-time blue darken-3'>Apr 1, 2020 08:47:26 AM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Negativo</span>
-						<span class='test-time'>Mar 27, 2020 06:03:27 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:47:41 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:03:27 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:03:27 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+506ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:47:41 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:47:41 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+649ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,7 +179,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:03:27 PM</td>
+					<td class='timestamp'>8:47:41 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteLoginNegativo</td>
 				</tr>
 			</tbody>
@@ -195,14 +195,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>Cenario de Teste Positivo</span>
-						<span class='test-time'>Mar 27, 2020 06:03:46 PM</span>
+						<span class='test-time'>Apr 1, 2020 08:47:56 AM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 27, 2020 06:03:46 PM</span>
-	<span class='label end-time'>Mar 27, 2020 06:03:47 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+612ms</span>
+	<span class='label start-time'>Apr 1, 2020 08:47:56 AM</span>
+	<span class='label end-time'>Apr 1, 2020 08:47:56 AM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+708ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -216,7 +216,7 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>6:03:47 PM</td>
+					<td class='timestamp'>8:47:56 AM</td>
 					<td class='step-details'>Teste PASSOU: TesteLoginPositivo</td>
 				</tr>
 			</tbody>
@@ -274,19 +274,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 27, 2020 06:03:10 PM</div>
+					<div class='panel-lead'>Apr 1, 2020 08:47:26 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 27, 2020 06:03:48 PM</div>
+			 		<div class='panel-lead'>Apr 1, 2020 08:47:57 AM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 38s+101ms</div>
+					<div class='panel-lead'>0h 0m 31s+372ms</div>
 				</div>
 			</div>
 		</div>
