--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--367323455\testng-customsuite.xml</span>
+                    <span>C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--263896387\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa" hash-for-method="TesteConsultaLupaNegativo">TesteConsultaLupaNegativo</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteLogin" hash-for-method="TesteLoginNegativo">TesteLoginNegativo</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="br.com.rsi.hub3.automacao.tdd.testes.TesteLogin" hash-for-method="TesteLoginPositivo">TesteLoginPositivo</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +125,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa</span>
+              <span class="class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteLogin</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TesteConsultaLupaNegativo">
-                  </a> <!-- TesteConsultaLupaNegativo -->
-                  <span class="method-name">TesteConsultaLupaNegativo</span>
+                  <a name="TesteLoginNegativo">
+                  </a> <!-- TesteLoginNegativo -->
+                  <span class="method-name">TesteLoginNegativo</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TesteLoginPositivo">
+                  </a> <!-- TesteLoginPositivo -->
+                  <span class="method-name">TesteLoginPositivo</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--367323455\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\rafael.carmignotto\AppData\Local\Temp\testng-eclipse--263896387\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,11 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;TesteConsultaLupaNegativo&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa --&gt;
+      &lt;class name=&quot;br.com.rsi.hub3.automacao.tdd.testes.TesteLogin&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,16 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TesteConsultaLupaNegativo')
-data.setCell(0, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa')
-data.setCell(0, 3, 5799);
+data.setCell(0, 1, 'TesteLoginNegativo')
+data.setCell(0, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteLogin')
+data.setCell(0, 3, 6953);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'TesteLoginPositivo')
+data.setCell(1, 2, 'br.com.rsi.hub3.automacao.tdd.testes.TesteLogin')
+data.setCell(1, 3, 5985);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,16 +224,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">TesteConsultaLupaPositivo</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -230,26 +235,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">br.com.rsi.hub3.automacao.tdd.testes.TesteLogin</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">iniciarReport</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">inicializar</span>
-                <span class="method-start">90 ms</span>
+                <span class="method-start">81 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TesteConsultaLupaNegativo</span>
-                <span class="method-start">9136 ms</span>
+                <span class="method-name">TesteLoginNegativo</span>
+                <span class="method-start">8014 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">finalizar([TestResult name=TesteConsultaLupaNegativo status=SUCCESS method=TesteConsultaLupa.TesteConsultaLupa...)</span>
-                <span class="method-start">14937 ms</span>
+                <span class="method-name">finalizar([TestResult name=TesteLoginNegativo status=SUCCESS method=TesteLogin.TesteLoginNegativo()[pri:0, ins...)</span>
+                <span class="method-start">14968 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">inicializar</span>
+                <span class="method-start">16451 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">TesteLoginPositivo</span>
+                <span class="method-start">23854 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">finalizar([TestResult name=TesteLoginPositivo status=SUCCESS method=TesteLogin.TesteLoginPositivo()[pri:0, ins...)</span>
+                <span class="method-start">29840 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">finalizarReport</span>
-                <span class="method-start">16192 ms</span>
+                <span class="method-start">31396 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
