--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,18 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa</td>
+<td>br.com.rsi.hub3.automacao.tdd.testes.TesteLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TesteConsultaLupaNegativo</td>
+<td>TesteLoginPositivo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>TesteConsultaLupaPositivo</td>
+<td>TesteLoginNegativo</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
