--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="646f8f">  <td>20/03/29 12:24:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteConsultaLupa.TesteConsultaLupaNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5db45159]">TesteConsultaLupaNegativo</td> 
-  <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>20/03/29 12:24:16</td>   <td>5802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteConsultaLupa.finalizar(org.testng.ITestResult)[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5db45159]">&lt;&lt;finalizar</td> 
-<td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>20/03/29 12:24:18</td>   <td>7057</td> <td title="&lt;&lt;TesteConsultaLupa.finalizarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5db45159]">&lt;&lt;finalizarReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>20/03/29 12:24:01</td>   <td>-9045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteConsultaLupa.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5db45159]">&gt;&gt;inicializar</td> 
-<td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
-<tr bgcolor="646f8f">  <td>20/03/29 12:24:01</td>   <td>-9134</td> <td title="&gt;&gt;TesteConsultaLupa.iniciarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteConsultaLupa@5db45159]">&gt;&gt;iniciarReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1891502635</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteLogin.TesteLoginNegativo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">TesteLoginNegativo</td> 
+  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:50</td>   <td>15840</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TesteLogin.TesteLoginPositivo()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">TesteLoginPositivo</td> 
+  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:41</td>   <td>6955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteLogin.finalizar(org.testng.ITestResult)[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:56</td>   <td>21826</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TesteLogin.finalizar(org.testng.ITestResult)[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&lt;&lt;finalizar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:57</td>   <td>23382</td> <td title="&lt;&lt;TesteLogin.finalizarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&lt;&lt;finalizarReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:26</td>   <td>-7932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteLogin.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:42</td>   <td>8438</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TesteLogin.inicializar()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&gt;&gt;inicializar</td> 
+<td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
+<tr bgcolor="c87990">  <td>20/04/01 08:47:26</td>   <td>-8011</td> <td title="&gt;&gt;TesteLogin.iniciarReport()[pri:0, instance:br.com.rsi.hub3.automacao.tdd.testes.TesteLogin@13acb0d1]">&gt;&gt;iniciarReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1653844940</td>   <td></td> </tr>
 </table>
